The overflow issue is fixed...

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,5 +1,4 @@
 .dropdowns {
-    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
