--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -18,7 +18,7 @@
         img {
             position: absolute;
             right: 10px;
-            top: 35%;
+            top: 41%;
             transition: transform 250ms ease-in-out;
         }
         .open {
