--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -10,7 +10,8 @@ header {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    align-items: center;
+    padding: 0;
+    margin-right: -28px;
     a {
       text-decoration: none;
       text-transform: uppercase;
@@ -25,7 +26,7 @@ header {
 
 @media (min-width: 800px) {
   header {
-    padding: 40px 100px;
+    padding: 30px 100px;
     height: 68px;
     ul {
       a {
